# time-domain-ccst

./: .gitignore  README.md  cst_paper.mplstyle  pyproject.toml  requirements.txt
notebooks/: 01_checking_local_matrices_analytically.ipynb  02_explore_time_plots.ipynb  int_cargas.ipynb
scripts/: eigsolve_new_model.py  eigsolve_old_model.py  manufactured_solutions_verification.py  run.py  run_new_model.py  run_old_model.py  solve_single_element.py
scripts/basic_solutions/: eigsolve_new_model.py  eigsolve_old_model.py  run_new_model.py  run_old_model.py  solve_single_element.py
scripts/eigen_validations/: fixed_cantilever_different_etas.py  solve_fixed_cantilever.py  solve_fixed_circle.py  solve_free_cantilever.py  utils.py
scripts/eigenproblem_paper/: classical_vs_ccst.py  fixed_cantilever_different_etas.py
scripts/manufactured_solutions/: check_null_rotational.py  compare_symbolic_calculations.py  run_all_borders_fixed.py  run_method.py
scripts/manufactured_solutions_dynamic/: compare_loads_static_dynamics.py  run_all_borders_fixed.py
scripts/static_validations/: cantilever_different_hl.py  cantilever_different_hl_load.py  solve_cantilever.py  solve_plate_hole.py  solve_quarter_ring.py
scripts/time_marching/: ccst_time_marching.py  ccst_vs_classical_time_marching.py  classical_time_marching.py  energy_comparison.py  pulse_propagation.py
time_domain_ccst/: constants.py  constraints_loads_creators.py  cst_utils.py  fem_solver.py  gmesher.py  plotter.py  utils.py
time_domain_ccst/mms/: plots.py  proposed_solutions.py  utils.py
(+14 files in other folders)
