[tool.poetry]
name = "time-domain-ccst"
version = "0.1.0"
description = ""
authors = ["José Ortiz-Ocampo <joseortiz1807@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gmsh = "^4.12.2"
meshio = "<=3.0"
solidspy = "^1.1.0.post1"
solidspy-uels = {git = "https://github.com/nicoguaro/solidspy_uels"}
sympy = "^1.12"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
